--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "react-icons": "^4.6.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.28.0",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "vite": "^3.2.3",
+    "@vitejs/plugin-react": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.3",
-    "vite": "^3.2.3"
+    "tailwindcss": "^3.2.3"
   }
 }
