--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "npx vite build",
+    "dev": "vite",
+    "start": "vite",
+    "build": "NODE_ENV=production vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,8 +20,7 @@
     "react-icons": "^4.6.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.28.0",
-    "swiper": "^8.4.4",
-    "scheduler": "^0.23.0"
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
@@ -30,8 +30,5 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.3",
     "vite": "^3.2.3"
-  },
-  "engines": {
-    "node": ">=16.0.0"
   }
 }
