--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "NODE_ENV=production vite build",
+    "build": "npm install -g vite && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
